--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <div class="inputs">
                 <label>Book Description: </label>
                 <textarea class="validate" id="desc" cols="30" rows="10"></textarea>
-            </div>  
+            </div> <br> <br>  
         <div class="inputs">
                 <label for="book-author">Book Author: </label>
                 <input class="validate" type="text" id="author">
-            </div>    
+            </div> <br> <br>   
         <div class="inputs">
                 <label for="book-link">PDF Link: </label>
                 <input class="validate" type="text" id="link">
-            </div>  
+            </div> <br> <br> 
         <div class="inputs">
                 <input type="button" onclick="addToLibrary()" value="Add Book">
                 <input type="button" onclick="resetForm()" value="Reset">
